--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ngx-scratch-wrapper",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build ngx-scratch",
     "build:watch": "ng build ngx-scratch --watch",
+    "build:scratch-gui": "ts-node -P tsconfig.build.json ./scripts/build-scratch-gui.ts",
     "serve:demo": "ng serve demo",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -20,7 +21,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
-    "ngx-scratch": "file:dist/ngx-scratch/ngx-scratch-0.0.1.tgz",
+    "ngx-scratch": "^0.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
